crates/plotnik-tests/tests/macro_ui/fail/relative_crate_path.stderr
error: `crate = plotnik::rt` must be an absolute module path like `::my_facade::rt` or `::plotnik_rt`
 --> tests/macro_ui/fail/relative_crate_path.rs:6:5
  |
6 |     crate = plotnik::rt,
  |     ^^^^^
